--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,7 +1,7 @@
 body {
   width: 100%;
   max-width: 100%;
-  font-family: "Euclid Flex", "Arial", sans-serif;
+  font-family: "Arial", sans-serif;
   font-size: 20px;
   line-height: 1.4;
   font-weight: 400;
