--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,10 @@
-@import "fonts.less";
+//@import "fonts.less";
 @import "normalize.less";
 @import "variables.less";
 @import "mixin.less";
 @import "scaffolding.less";
+@import "blocks/wrapper";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/promo";
+@import "blocks/stylish";
