--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -7,9 +7,9 @@
 }
 
 .header__wrap {
-  width: 1460px;
-  padding-left: 20px;
-  padding-right: 20px;
+  width: 100%;
+  padding-left: 30px;
+  padding-right: 30px;
   padding-top: 16px;
   padding-bottom: 14px;
   margin-left: auto;
