--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,4 @@
-//@import "fonts.less";
+@import "fonts.less";
 @import "normalize.less";
 @import "variables.less";
 @import "mixin.less";
@@ -10,3 +10,5 @@
 @import "blocks/stylish";
 @import "blocks/wide";
 @import "blocks/action";
+@import "blocks/social";
+@import "blocks/footer";
