--- a/less/fonts.less
+++ b/less/fonts.less
@@ -2,6 +2,14 @@
   font-weight: 400;
   font-family: "Euclid Flex";
   font-style: normal;
-  src: url("../fonts/euclidflex-regular.woff2") format("woff2"),
-    url("../fonts/euclidflex-regular.woff") format("woff");
+  src: url("../fonts/EuclidFlexRegular.woff2") format("woff2"),
+    url("../fonts/EuclidFlexRegular.woff") format("woff");
+}
+
+@font-face {
+  font-weight: 500;
+  font-family: "Euclid Flex";
+  font-style: normal;
+  src: url("../fonts/EuclidFlexMedium.woff2") format("woff2"),
+    url("../fonts/EuclidFlexMedium.woff") format("woff");
 }
