--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -4,12 +4,16 @@
   left: 0;
   right: 0;
   z-index: 100;
+  
+  .logo {
+    padding-bottom: 10px;
+  }
 }
 
 .header__wrap {
-  width: 100%;
-  padding-left: 30px;
-  padding-right: 30px;
+  width: 1440px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 16px;
   padding-bottom: 14px;
   margin-left: auto;
@@ -24,6 +28,7 @@
   justify-content: flex-end;
   align-items: flex-start;
   margin-left: auto;
+  padding-top: 14px;
   font-size: 14px;
   color: #fff;
   letter-spacing: 0.73px;
@@ -37,7 +42,8 @@
   justify-content: flex-end;
   
   li {
-    margin-left: 10px;
+    margin-left: 15px;
+    line-height: 21px;
   }
 }
 
@@ -46,6 +52,7 @@
   
   a {
     font-size: 16px;
+    line-height: 21px;
     display: block;
   }
   
