--- a/less/blocks/stylish.less
+++ b/less/blocks/stylish.less
@@ -1,13 +1,13 @@
 .style {
-  padding-top: 25px;
-  padding-bottom: 20px;
+  padding-top: 37px;
+  padding-bottom: 57px;
 }
 
 .style__title {
   max-width: 840px;
   padding: 50px 0;
   margin: 0 auto;
-  margin-bottom: 25px;
+  margin-bottom: 35px;
   position: relative;
   text-align: center;
   font-size: 20px;
@@ -74,9 +74,9 @@
 }
 
 .style__info {
-  padding: 20px;
+  min-height: 117px;
+  padding: 25px 15px;
   padding-right: 200px;
-  padding-bottom: 60px;
   
   p {
     margin-top: 0;
@@ -94,15 +94,16 @@
 
 .style__btn {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
-  width: 180px;
-  height: 50px;
+  bottom: 15px;
+  right: 15px;
+  width: 170px;
+  height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
-  font-size: 16px;
+  font-size: 12px;
+  line-height: 1;
   text-transform: uppercase;
   background-color: #6b6b6b;
 }
