--- a/less/blocks/wide.less
+++ b/less/blocks/wide.less
@@ -1,4 +1,5 @@
 .wide {
+  margin-bottom: 62px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -19,8 +20,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 115px;
+  padding-bottom: 115px;
   color: #fff;
   font-size: 18px;
   text-align: center;
@@ -34,20 +35,21 @@
 
 .wide__title {
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   font-size: 34px;
   text-transform: uppercase;
 }
 
 .wide__btn {
-  width: 220px;
-  height: 50px;
+  width: 190px;
+  height: 45px;
   margin-top: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 12px;
+  line-height: 1;
   color: #3c3c3b;
   background-color: #fff;
 }
