--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,4 +1,5 @@
 body {
+  position: relative;
   width: 100%;
   max-width: 100%;
   font-family: "Euclid Flex", "Arial", sans-serif;
@@ -49,4 +50,38 @@ button {
   padding: 0;
   cursor: pointer;
   background-color: rgba(255, 255, 255, 0);
+}
+
+.top {
+  position: fixed;
+  bottom: 300px;
+  right: 30px;
+  height: 65px;
+  width: 65px;
+  border: 1px solid #fff;
+  background-color: rgba(0,0,0,.2);
+  background-image: url(../img/icons/icon-top.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 40px 40px;
+  
+  p {
+    margin: 0;
+    position: absolute;
+    right: 100%;
+    top: 0;
+    bottom: 0;
+    width: 220px;
+    padding: 10px 10px;
+    color: #fff;
+    line-height: 1;
+    text-align: right;
+    background-color: rgba(0,0,0,.2);
+    border: 1px solid #fff;
+    
+    span {
+      display: block;
+      text-transform: uppercase;
+    }
+  }
 }
