--- a/less/blocks/menu.less
+++ b/less/blocks/menu.less
@@ -21,4 +21,99 @@
 
 .menu__wrap {
   display: none;
+  
+  &--opened {
+    display: block;
+    position: absolute;
+    z-index: 150;
+    top: 0;
+    right: 0;
+    width: 385px;
+    padding: 55px 110px;
+    padding-right: 80px;
+    background-color: #fff;
+  }
+}
+
+.menu__close {
+  position: absolute;
+  top: 20px;
+  right: 0;
+  z-index: 200;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/icons/icon-menu-cross.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 15px 15px;
+}
+
+.menu__sublist,
+.menu__list {
+  .reset();
+  list-style: none;
+}
+
+.menu__sublist {
+  display: none;
+}
+
+.menu__link {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  padding-right: 20px;
+  margin-bottom: 14px;
+  font-size: 16px;
+  
+  &--more {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 8px;
+      right: 0;
+      width: 0;
+      height: 0;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+      border-top: 5px solid #a0a0a0;
+    }
+  }
+}
+
+.menu__sublink {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 8px;
+  font-size: 14px;
+  
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    width: 11px;
+    height: 2px;
+    background-color: #a0a0a0;
+  }
+}
+
+.menu__contacts {
+  margin-top: 35px;
+  padding-top: 10px;
+  font-size: 16px;
+  border-top: 1px solid #dadada;
+  
+  a {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 14px;
+  }
+  
+  .menu__feedback {
+    opacity: 0.7;
+    margin-bottom: 30px;
+  }
 }
