--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -5,6 +5,30 @@
   justify-content: flex-end;
   align-items: center;
   margin-top: 20px;
+  
+  &--menu {
+    justify-content: flex-start;
+    margin-top: 10px;
+    
+    .social__item {
+      margin-left: 0;
+      margin-right: 20px;
+    }
+    
+    .social__link {
+      width: 20px;
+      height: 20px;
+      background-size: 10px 10px;
+      opacity: 0.7;
+      .transition();
+      
+      &:hover,
+      &:active {
+        opacity: 1;
+        .transition();
+      }
+    }
+  }
 }
 
 .social__item {
