--- a/less/blocks/wide.less
+++ b/less/blocks/wide.less
@@ -1,17 +1,14 @@
 .wide {
   margin-bottom: 62px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
   
   &--bg1 {
-    background-image: url(../img/backgrounds/bg-3.jpg);
+    min-height: 442px;
   }
   &--bg2 {
-    background-image: url(../img/backgrounds/bg-2.jpg);
+    min-height: 418px;
   }
   &--bg3 {
-    background-image: url(../img/backgrounds/bg-1.jpg);
+    min-height: 442px;
   }
 }
 
