--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -1,8 +1,7 @@
 .modal {
-  width: 686px;
+  width: 400px;
   max-width: 100%;
-  padding: 60px 90px;
-  padding-bottom: 90px;
+  padding: 40px;
   box-shadow: 0 0 10px 3px rgba(255,255,255,0.5);
   text-align: center;
   font-size: 16px;
@@ -13,15 +12,16 @@
 }
 
 .modal__title {
+  margin-top: 0;
   font-size: 28px;
   font-weight: 500;
   text-transform: uppercase;
 }
 
 .modal__wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
+//  display: flex;
+//  justify-content: space-between;
+//  align-items: flex-start;
   font-family: "Euclid Flex", "Arial", sans-serif;
 }
 
@@ -133,7 +133,7 @@
 }
 
 .modal__column {
-  width: 48%;
+  width: 100%;
   
   &--text {
     align-self: stretch;
