--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -3,3 +3,272 @@
     width: 100%;
   }
 }
+
+@media (max-width: 1240px) {
+  .wrapper {
+    width: 100%;
+  }
+  .promo__slider {
+    height: auto;
+  }
+  .promo__next {
+    right: 10px;
+  }
+  .promo__prev {
+    left: 10px;
+  }
+  .action__list {
+    justify-content: space-around;
+  }
+  .action__item {
+    margin-right: 0;
+  }
+  .footer__top {
+    display: block;
+  }
+  .footer__links {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-top: 20px;
+    
+    a {
+      display: block;
+      flex-grow: 1;
+      font-size: 15px !important;
+      line-height: 1.4 !important;
+      font-weight: 500;
+      text-align: center;
+      text-transform: uppercase;
+      border-right: 1px solid #dadada;
+      
+      &:last-of-type {
+        border-right: 0;
+      }
+    }
+  }
+  .footer__contacts-links,
+  .footer__title,
+  .footer__block {
+    display: none;
+  }
+  .footer__contacts {
+    margin-left: auto;
+  }
+  .footer__bottom {
+    position: relative;
+  }
+  .footer__copyright {
+    position: absolute;
+    bottom: 110%;
+    left: 0;
+  }
+  .footer__phone {
+    display: block;
+    font-size: 18px;
+  }
+}
+
+//-------------------------------------------
+@media (max-width: 1022px) {
+  .header__list {
+    display: none;
+  }
+  .header__menu {
+    padding-top: 0;
+  }
+  .style__info {
+    padding-right: 15px;
+  }
+  .style__btn {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    right: auto;
+    margin-top: 20px;
+  }
+  .action__item {
+    width: 48%;
+  }
+}
+
+//-------------------------------------------
+@media (max-width: 766px) {
+  .footer__links a,
+  .footer__copyright,
+  .footer__comment,
+  .footer__bottom .logo {
+    display: none;
+  }
+  .footer__contacts {
+    margin-right: auto;
+
+    .social {
+      justify-content: center;
+    }
+  }
+  .footer__bottom {
+    display: block;
+    text-align: center;
+  }
+  .footer__links {
+    justify-content: space-between;
+  }
+  .footer__links .footer__btn {
+    flex-grow: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48%;
+    height: 45px;
+    color: #3c3c3b;
+    font-size: 12px !important;
+    line-height: 1;
+    text-transform: uppercase;
+    background-color: #fff;
+    border-right: 0;
+  }
+  .action {
+    padding-bottom: 40px;
+  }
+  .action__item {
+    height: 180px;
+    margin-bottom: 20px;
+    
+    p {
+      font-size: 16px;
+    }
+  }
+  .style__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .style__info {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    span {
+      margin-bottom: 10px;
+    }
+  }
+  .style__btn {
+    margin-top: auto;
+  }
+  .menu__wrap {
+    max-width: 100%;
+    padding: 55px;
+  }
+  .promo__pagination .swiper-pagination-bullet {
+    width: 50px;
+    height: 2px;
+  }
+  .promo__pagination {
+    bottom: 10px !important;
+  }
+  .promo__next,
+  .promo__prev {
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+  }
+  .wide__wrap p {
+    max-width: 100%;
+  }
+  .style__img {
+    height: 169px;
+    overflow: hidden;
+  }
+}
+
+//------------------------------------
+@media (max-width: 480px) {
+  .header__phone .header__call,
+  .header__phone a {
+    font-size: 12px;
+    margin: 0;
+  }
+  .menu {
+    margin-left: 0;
+  }
+  .menu__btn {
+    width: 40px;
+  }
+  .header .logo {
+    max-width: 100px;
+  }
+  .style {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  .style__title {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+  .style__info {
+    padding: 15px;
+  }
+  .style__info p {
+    font-size: 14px;
+    line-height: 1.2;
+  }
+  .style__btn {
+    max-width: 100%;
+    height: 40px;
+    font-size: 10px;
+  }
+  .style__item {
+    margin-bottom: 20px;
+  }
+  .style__img {
+    height: 103px;
+  }
+  .wide__wrap {
+    font-size: 14px;
+  }
+  .wide__title {
+    font-size: 22px;
+  }
+  .wide {
+    margin-bottom: 30px;
+  }
+  .action__item {
+    height: 100px;
+    margin-bottom: 10px;
+    
+    p {
+      padding: 10px;
+      font-size: 12px;
+    }
+  }
+  .top {
+    position: static;
+    width: 100%;
+    height: 40px;
+    border: 0;
+    background-position: center right 15px;
+    background-size: 30px 30px;
+    
+    p {
+      opacity: 1;
+      position: static;
+      width: 80%;
+      height: 100%;
+      padding: 0;
+      border: 0;
+      font-size: 16px;
+      line-height: 40px;
+      text-align: center;
+      
+      span {
+        display: inline;
+        margin-right: 5px;
+        text-transform: none;
+      }
+    }
+  }
+}
