--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -5,6 +5,7 @@
   box-shadow: 0 0 10px 3px rgba(255,255,255,0.5);
   text-align: center;
   font-size: 16px;
+  box-sizing: border-box;
   
   &--order {
     width: 993px;
