--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -197,13 +197,13 @@
   }
   .menu__btn {
     width: 40px;
-    
-    &::before {
-      right: 10px;
-    }
-    &::after {
-      left: 5px;
-    }
+//    
+//    &::before {
+//      right: 10px;
+//    }
+//    &::after {
+//      left: 5px;
+//    }
   }
   .header .logo {
     max-width: 100px;
