--- a/less/blocks/menu.less
+++ b/less/blocks/menu.less
@@ -20,45 +20,45 @@
   background-size: 26px auto;
   background-position: top center;
   
-  &::before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    right: 14px;
-    top: -5px;
-    width: 0;
-    height: 0;
-    background-color: #6b6b6b;
-    opacity: 0;
-    transition: .3s ease-in-out;
-  }
-  &::after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: -7px;
-    left: 9px;
-    width: 0;
-    height: 0;
-    border: 1px solid #fff;
-    opacity: 0;
-    transition: .3s ease-in-out;
-  }
-  &:hover,
-  &:active {
-    &::before {
-      width: 20px;
-      height: 46px;
-      opacity: 0.6;
-      transition: .3s ease-in-out;
-    }
-    &::after {
-      width: 30px;
-      height: 50px;
-      opacity: 1;
-      transition: .3s ease-in-out;
-    }
-  }
+//  &::before {
+//    content: "";
+//    position: absolute;
+//    z-index: -1;
+//    right: 14px;
+//    top: -5px;
+//    width: 0;
+//    height: 0;
+//    background-color: #6b6b6b;
+//    opacity: 0;
+//    transition: .3s ease-in-out;
+//  }
+//  &::after {
+//    content: "";
+//    position: absolute;
+//    z-index: -1;
+//    top: -7px;
+//    left: 9px;
+//    width: 0;
+//    height: 0;
+//    border: 1px solid #fff;
+//    opacity: 0;
+//    transition: .3s ease-in-out;
+//  }
+//  &:hover,
+//  &:active {
+//    &::before {
+//      width: 20px;
+//      height: 46px;
+//      opacity: 0.6;
+//      transition: .3s ease-in-out;
+//    }
+//    &::after {
+//      width: 30px;
+//      height: 50px;
+//      opacity: 1;
+//      transition: .3s ease-in-out;
+//    }
+//  }
 }
 
 .menu__wrap {
@@ -70,11 +70,11 @@
   padding: 55px 110px;
   padding-right: 80px;
   background-color: #fff;
-  opacity: 0;
+  display: none;
   transition: ease 0.3s;
   
   &--opened {
-    opacity: 1;
+    display: block;
     z-index: 150;
     transition: ease 0.3s;
   }
